--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "hehehe",
   "private": true,
+  "homepage": "https://rzwshre.github.io/hehehe",
   "version": "0.0.0",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
@@ -19,6 +22,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "gh-pages": "^4.0.0",
     "vite": "^2.9.9"
   }
 }
